# bms-table-rs

./: CHANGELOG.md  Cargo.toml  README.md  README.zh_CN.md  deny.toml  release-please-config.json  release-plz.toml
.github/: renovate.json
.github/workflows/: publish.yml  release-please.yml  rust.yml
examples/: demo.rs  multi_fetch.rs  single_fetch.rs  single_fetch_index.rs  single_fetch_list.rs
src/: de.rs  fetch.rs  lib.rs  main.rs  ser.rs
src/fetch/: reqwest.rs
tests/: fetch_reqwest.rs  fetch_tests.rs  lib_tests.rs  parse_html.rs  parse_json.rs  serialize.rs  serialize_info.rs
