[package]
name = "bms-table"
version = "0.10.1"
edition = "2024"
license = "Apache-2.0"
description = "BMS难度表数据获取器"
authors = ["MiyakoMeow"]
repository = "https://github.com/MiyakoMeow/bms-table-rs"
documentation = "https://docs.rs/bms-table"
categories = ["data-structures", "games"]
keywords = ["bms", "table", "data", "fetch", "parser"]

[features]
default = ["serde", "scraper", "reqwest"]
serde = ["dep:serde", "dep:serde_json"]
scraper = ["serde", "dep:scraper", "dep:url"]

# 转发 reqwest 的 cookies 特性，使客户端可启用 Cookie 存储
reqwest = ["scraper", "dep:reqwest"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

scraper = { version = "0.24", optional = true }
url = { version = "2", optional = true }

reqwest = { version = "0.12", features = ["cookies"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
